# cuckoo-filter

./: cuckoo-filter.cabal
bench/: bench.hs
src/Data/: CuckooFilter.hs
src/Data/CuckooFilter/: Base.hs  Mutable.hs
