name:                cuckoo-filter
version:             0.1
license:             BSD3
author:              Alec Heller
maintainer:          alec@deviant-logic.net
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.8 && <4.9
                     , bytes
                     , hashabler
                     , mwc-random
                     , primitive
                     , vector
  hs-source-dirs:      src
  ghc-options:         -O2 -rtsopts -auto-all
  default-language:    Haskell2010
  exposed-modules:     Data.CuckooFilter.Base
                       Data.CuckooFilter.Mutable

benchmark bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             bench.hs
  ghc-options:         -O2 -rtsopts
  build-depends:       base >=4.8 && <5
                     , cuckoo-filter

                     , bloomfilter
                     , criterion
                     , deepseq
                     , mwc-random
                     , unordered-containers
                     , vector